# data-engineering

./: .gitignore  README.md  data_loader.py  environment.yml  pyproject.toml  write_to_db.py
api_example/: README.md  api_reader.py
config/: db_credentials.py
data/: processed_dataset.parquet
etl/: extract.py  load.py  main.py  transform.py  validate.py
notebooks/: EDA.ipynb  README.md
parse_example/: README.md  data_parser.py
