[project]
name = "data-engineering"
version = "0.1.0"
description = "Data Engineering homework project"
authors = [
    {name = "DavidKurbanov333",email = "david.kurbanov2003@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "jupyterlab (>=4.4.7,<5.0.0)",
    "wget (>=3.2,<4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
