[project]
name = "data-engineering"
version = "0.1.0"
description = "Data Engineering homework projects"
authors = [
    { name = "David Kurbanov", email = "david.kurbanov2003@mail.ru" }
]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "pandas>=2.3.2,<3.0.0",
    "numpy>=2.3.3,<3.0.0",
    "requests>=2.32.5,<3.0.0",
    "beautifulsoup4>=4.14.2,<5.0.0",
    "lxml>=5.3.0,<6.0.0",
    "matplotlib>=3.10.6,<4.0.0",
    "pyarrow>=21.0.0,<22.0.0",
    "jupyterlab>=4.4.7,<5.0.0",
    "ipykernel>=6.30.1,<7.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
